<resources>
    <string name="app_name">booking_res</string>
    <string name="booking_res">Restaurant Booking</string>
    <string name="cate_res_name">Cate_Res_Name</string>
    <string name="title_activity_admin">AdminActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_admin">Trang Admin</string>
    <string name="nav_title">Booking Res</string>
    <string name="admin_user">Quản lý người dùng</string>
    <string name="admin_restaurant">Quản lý nhà hàng</string>
    <string name="admin_category">Quản lý loại nhà hàng</string>
    <string name="admin_region">Quản lý khu vực</string>
    <string name="admin_table">Quản lý bàn ăn</string>
    <string name="admin_bill">Quản lý đơn</string>
    <string name="admin_profile">Thông tin</string>

    <string name="admin_logout">Đăng xuất</string>
    <string name="list">Danh sách</string>
    <string name="update">Thêm</string>
    <string name="lb_res_admin">Nhà hàng</string>
    <string name="lb_user">nguời dùng</string>
    <string name="lb_admin">nhà hàng</string>
    <string name="lb_active">active</string>
    <string name="lb_non_active">non-active</string>
</resources>