<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:checkable="true"
        android:title="@string/nav_title"
        android:icon="@color/black"
        />

    <item
        android:title=""
        >
        <menu>
            <item
                android:id="@+id/navRegionAdmin"
                android:icon="@drawable/region_icon"
                android:title="@string/admin_region"/>

            <item
                android:id="@+id/navTableAdmin"
                android:icon="@drawable/category_icon"
                app:iconTint="@color/black"
                android:title="@string/admin_table"/>

            <item
                android:id="@+id/navBillAdmin"
                android:icon="@drawable/bill_icon"
                android:title="@string/admin_bill" />


            <item
                android:id="@+id/navLogoutAdmin"
                android:icon="@drawable/top_app_bar_logout"
                android:title="@string/admin_logout"/>
        </menu>
    </item>

</menu>