<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:checkable="true"
        android:title="@string/nav_title"
        android:icon="@color/black"
        />

    <item
        android:title=""
        >
        <menu>
            <item
                android:id="@+id/navUserAdmin"
                android:icon="@drawable/user_icon"
                android:title="@string/admin_user"/>

            <item
                android:id="@+id/navRestaurantAdmin"
                android:icon="@drawable/restaurant_icon"
                app:iconTint="@color/black"
                android:title="@string/admin_restaurant"/>

            <item
                android:id="@+id/navLogoutAdmin"
                android:icon="@drawable/top_app_bar_logout"
                android:title="@string/admin_logout"/>
        </menu>
    </item>

</menu>