<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.AdminActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarMainAdminActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            >

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBarResAdmin"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/brown"
                app:title="@string/title_admin"
                android:fontFamily="@font/lobster"
                app:titleTextColor="@color/white"
                app:buttonGravity="center_vertical"
                app:navigationIcon="@drawable/top_app_bar_menu"
                >

            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.AppBarLayout>
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <com.google.android.material.tabs.TabItem
                android:id="@+id/region_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/region_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update" />
        </com.google.android.material.tabs.TabLayout>

        <FrameLayout
            android:id="@+id/fragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationMenuAdmin"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:visibility="invisible"
        android:background="@color/PeachPuff"
        app:itemTextColor="@color/black"
        app:menu="@menu/navigation_drawer_res_admin"
        app:itemIconPadding="40dp"
        app:itemIconSize="30dp"
        >


        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="90dp"
            android:layout_height="64dp"
            />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/navigationCloseAdmin"
            android:layout_width="41dp"
            android:layout_height="35dp"
            android:layout_marginStart="240dp"
            android:layout_marginTop="15dp"
            app:srcCompat="@drawable/ic_previous"
            />
    </com.google.android.material.navigation.NavigationView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>