<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment.SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageViewBg"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:foreground="@drawable/foreground_design"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_sign_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></ImageView>

        <TextView

            android:id="@+id/textViewSU1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="208dp"
            android:fontFamily="@font/lobster"
            android:text="@string/booking_res"
            android:textAlignment="center"

            android:textColor="@color/white"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


        </TextView>

        <TextView
            android:id="@+id/textViewSU2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lobster"
            android:text="Đăng ký"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSU1"></TextView>


        <EditText
            android:id="@+id/edt_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="41dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="41dp"
            android:backgroundTint="#CCCCCC"
            android:drawableLeft="@drawable/icon_user"
            android:drawablePadding="12dp"
            android:hint="Tài khoản..."
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSU2"
            app:layout_constraintWidth_percent=".8" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="41dp"

            android:layout_marginEnd="41dp"
            android:backgroundTint="#CCCCCC"
            android:drawableLeft="@drawable/icon_lock"
            android:drawablePadding="12dp"
            android:hint="Mật khẩu..."

            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_email"
            app:layout_constraintWidth_percent=".8" />


        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="41dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="41dp"
            android:backgroundTint="#8A675E"
            android:padding="16dp"
            android:text="Đăng ký"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textColorLink="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_password"
            app:layout_constraintWidth_percent=".8">

        </Button>

        <TextView
            android:id="@+id/textViewSU4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="72dp"
            android:layout_marginTop="16dp"
            android:text="Đã có tài khoản?"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/btn_sign_up"
            app:layout_constraintTop_toBottomOf="@+id/btn_sign_up" />

        <TextView
            android:id="@+id/btn_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:onClick="signInFromSignUp"
            android:text="Đăng nhập"
            android:textAlignment="center"
            android:textColor="#8A675E"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/textViewSU4"
            app:layout_constraintTop_toBottomOf="@+id/btn_sign_up" />

        <RadioGroup
            android:id="@+id/radio_group_role"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/btn_sign_up"
            app:layout_constraintEnd_toEndOf="@+id/imageViewBg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_password">

            <RadioButton
                android:id="@+id/radio_res_admin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/lb_res_admin"
                android:textColor="@color/white"
                android:textSize="15dp" />

            <RadioButton
                android:id="@+id/radio_user"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/lb_user"
                android:textColor="@color/white"
                android:textSize="15dp" />
        </RadioGroup>


    </androidx.constraintlayout.widget.ConstraintLayout>




</FrameLayout>